Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanUndefined.quorum
Boolean x = undefined
boolean bool = cast(boolean, x)